# weaver_lang

./: Cargo.toml  LICENSE  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: error.rs  lib.rs
src/ast/: expr.rs  mod.rs  span.rs  template.rs  value.rs
src/eval/: context.rs  mod.rs
src/parser/: mod.rs  weaver.pest
src/registry/: mod.rs
tests/: dynamic_ids.rs  introspection.rs  macro_tests.rs
weaver_macros/: Cargo.toml
weaver_macros/src/: lib.rs
