[workspace]
members = [".", "macros"]
resolver = "2"

[package]
name = "weaver_lang"
authors = ["crux03"]
version = "0.3.0"
edition = "2024"
description = "A dynamic text evaluation language for procedural content generation"
license = "MIT"
repository = "https://github.com/crux-03/weaver_lang"

[dependencies]
pest = "=2.8.6"
pest_derive = "=2.8.6"
thiserror = "1"
macros = { package = "weaver_macros", version = "0.2.0", path = "macros", optional = true }

[dev-dependencies]
macros = { package = "weaver_macros", version = "0.2.0", path = "macros" }

[features]
default = ["macros"]
macros = ["dep:macros"]
